deployment/fraud/kafka/strimzi/production/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fraud-streaming
  labels:
    app.kubernetes.io/part-of: futurpayment-fraud
    fraud-kafka-access: allowed
